// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blog > should get blog entry 1`] = `
Object {
  "content": "试试",
  "createdAt": 1680065731,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319484,
  "noreply": 0,
  "public": true,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "试试",
  "type": 1,
  "updatedAt": 1680072373,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;

exports[`blog > should get blog photos 1`] = `
Object {
  "data": Array [],
  "total": 0,
}
`;

exports[`blog > should get blog related subjects 1`] = `
Array [
  Object {
    "id": 184017,
    "info": "233话 / 1582-10-14",
    "locked": false,
    "name": "沙盒",
    "nameCN": "Bangumi Wiki 动画测试用沙盘",
    "nsfw": false,
    "rating": Object {
      "count": Array [
        1,
        1,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        3,
      ],
      "rank": 0,
      "score": 6.57,
      "total": 7,
    },
    "type": 2,
  },
]
`;

exports[`blog > should get private blog entry from friend 1`] = `
Object {
  "content": "感谢 @ klion 提供数据，相关条目数据进行了一次更新。


[img]https://s3.bgm38.com/images/Snipaste_2023-06-05_16-33-39.jpg[/img]

",
  "createdAt": 1680065928,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319486,
  "noreply": 0,
  "public": false,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "[2023-06-05] 相关条目数据更新",
  "type": 1,
  "updatedAt": 1724513422,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;

exports[`blog > should get private blog entry from self 1`] = `
Object {
  "content": "感谢 @ klion 提供数据，相关条目数据进行了一次更新。


[img]https://s3.bgm38.com/images/Snipaste_2023-06-05_16-33-39.jpg[/img]

",
  "createdAt": 1680065928,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319486,
  "noreply": 0,
  "public": false,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "[2023-06-05] 相关条目数据更新",
  "type": 1,
  "updatedAt": 1724513422,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;

exports[`blog comments > should get blog comments 1`] = `
Array [
  Object {
    "content": "测试评论",
    "createdAt": 1718275200,
    "creatorID": 287622,
    "id": 12345670,
    "mainID": 345911,
    "relatedID": 0,
    "replies": Array [
      Object {
        "content": "测试评论2",
        "createdAt": 1718275200,
        "creatorID": 287622,
        "id": 12345671,
        "mainID": 345911,
        "relatedID": 12345670,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 287622,
          "joinedAt": 0,
          "nickname": "nickname 287622",
          "sign": "sing 287622",
          "username": "287622",
        },
      },
      Object {
        "content": "测试评论3",
        "createdAt": 1718275200,
        "creatorID": 287622,
        "id": 12345672,
        "mainID": 345911,
        "relatedID": 12345670,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 287622,
          "joinedAt": 0,
          "nickname": "nickname 287622",
          "sign": "sing 287622",
          "username": "287622",
        },
      },
    ],
    "state": 0,
    "user": Object {
      "avatar": Object {
        "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
        "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
        "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
      },
      "group": 0,
      "id": 287622,
      "joinedAt": 0,
      "nickname": "nickname 287622",
      "sign": "sing 287622",
      "username": "287622",
    },
  },
]
`;

exports[`blog comments > should not allow create blog comment 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before creating a comment",
  "statusCode": 401,
}
`;

exports[`blog comments > should not delete blog comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to delete a comment which is not yours",
  "statusCode": 401,
}
`;

exports[`blog comments > should not edit blog comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to edit a comment which is not yours",
  "statusCode": 401,
}
`;

exports[`blog comments > should not edit blog comment with reply 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to edit a comment with replies",
  "statusCode": 401,
}
`;
